--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <h2 class="section-title">Case Studies <span class="emoji">📝</span></h2>
             <div class="case-studies-slider" id="caseStudiesSlider">
                 <div class="case-study-card">
-                    <div class="client-logo">Brokers War</div>
+                <a href= "ux-battle-webpage (1).html">    <div class="client-logo">Brokers <br> War</div> </a>
                     <p class="testimonial">"BRAG helped us completely transform our approach to user research, resulting in a 40% increase in customer satisfaction and significant improvements in our product design process."</p>
                     <p class="client-name">- Sarah Johnson, Product Director</p>
                 </div>
