--- a/index.html
+++ b/index.html
@@ -718,11 +718,12 @@
             <h2 class="section-title">Case Studies <span class="emoji">📝</span></h2>
             <div class="case-studies-slider" id="caseStudiesSlider">
                 <div class="case-study-card">
-                <a href= "ux-battle-webpage (1).html">    <div class="client-logo">Brokers <br> War</div> </a>
+                 <div class="client-logo">Brokers <br> War</div> 
                     <p class="testimonial">"BRAG helped us completely transform our approach to user research, resulting in a 40% increase in customer satisfaction and significant improvements in our product design process."</p>
-                    <p class="client-name">- Sarah Johnson, Product Director</p>
+                 
+                    <a href="ux-battle-webpage (1).html" class="insight-link">Read More <i class="fas fa-arrow-right"></i></a>
                 </div>
-                <a href='ux-battle-webpage (1).html'><div class="case-study-card"></a>
+                <div class="case-study-card">
                     <div class="client-logo">Client B</div>
                     <p class="testimonial">"Working with the BRAG team was a game-changer for our brand strategy. Their insights helped us reposition our brand in a competitive market and connect with new customer segments."</p>
                     <p class="client-name">- Michael Chen, CMO</p>
