--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
             <h2 class="section-title">Case Studies <span class="emoji">📝</span></h2>
             <div class="case-studies-slider" id="caseStudiesSlider">
                 <div class="case-study-card">
-                 <div class="client-logo">Brokers <br> Analysis 📝 </div> 
+<div style="text-align: center;"> <div class="client-logo">Brokers <br> Analysis 📝 </div></div>                   
                     <p class="testimonial">"BRAG helped us completely transform our approach to user research, resulting in a 40% increase in customer satisfaction and significant improvements in our product design process."</p>
                  
                     <a href="ux-battle-webpage (1).html" class="insight-link">Read More <i class="fas fa-arrow-right"></i></a>
