--- a/index.html
+++ b/index.html
@@ -770,11 +770,7 @@
                             <p>+91-7973817350</p>
                         </div>
                     </div>
-                    <div class="social-links">
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -810,6 +806,11 @@
                 <div class="footer-column">
                     <h3 class="footer-title">Connect With Us <span class="emoji">🤝</span></h3>
                     <p>Reach out to us directly at <strong>bharat@brag.asia</strong></p>
+                   <ul> <div class="social-links">
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    </div> </ul>
                 </div>
             </div>
             <div class="copyright">
