--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="case-studies-slider" id="caseStudiesSlider">
                 <div class="case-study-card">
 <div style="text-align: center;"> <div class="client-logo">Brokers <br> Analysis </div></div>                   
-                    <p class="testimonial">"BRAG helped us completely transform our approach to user research, resulting in a 40% increase in customer satisfaction and significant improvements in our product design process."</p>
+                    <p class="testimonial">"A brutally honest, data-backed UX teardown of Zerodha, Dhan & Upstox — see who wins India's trading app war and why."</p>
                  
                     <a href="ux-battle-webpage (1).html" class="insight-link">Read More <i class="fas fa-arrow-right"></i></a>
                 </div>
