--- a/index.html
+++ b/index.html
@@ -721,9 +721,10 @@
                     <a href="ux-battle-webpage (1).html" class="insight-link">Read More <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="case-study-card">
-                    <div class="client-logo">Client B</div>
-                    <p class="testimonial">"Working with the BRAG team was a game-changer for our brand strategy. Their insights helped us reposition our brand in a competitive market and connect with new customer segments."</p>
-                    <p class="client-name">- Michael Chen, CMO</p>
+                  <div style="text-align: center;">  <div class="client-logo">YT channel <br> Analysis </div></div>
+                    <p class="testimonial">"A data-backed UX teardown of India’s top finance YouTube channels—CA Rachana, Asset Yogi, and Pranjal Kamra—revealing what drives engagement, trust, and subscriber growth."</p>
+
+                    <a href="youtube-ux-showdown.html" class="insight-link">Read More <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="case-study-card">
                     <div class="client-logo">Client C</div>
