--- a/index.html
+++ b/index.html
@@ -788,11 +788,11 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3 class="footer-title">Legal</h3>
+                    <h3 class="footer-title">More Links</h3>
                     <ul class="footer-links">
                         <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
+                        <li><a href="#">TnC</a></li>
+                        <li><a href="report.html">Generate Report</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
